--- a/src/main/resources/templates/eServices2/AuditLog/audit-log-search-form-result.html
+++ b/src/main/resources/templates/eServices2/AuditLog/audit-log-search-form-result.html
@@ -24,7 +24,7 @@
                 jQuery.each(auditLogList, function (index, auditLog) {
                     var newObj = {};
                     newObj[COLUMN_1] = auditLog.userId;
-                    newObj[COLUMN_2] = (auditLog.funcId?auditLog.funcId:"");
+                    newObj[COLUMN_2] = (auditLog.groupId?auditLog.groupId:"");
                     newObj[COLUMN_3] = (auditLog.type?"[" + auditLog.type +"]":"") + (auditLog.fieldName?auditLog.fieldName:"")  ;
                     newObj[COLUMN_4] = (auditLog.value?auditLog.value:(auditLog.valueOld?"("+auditLog.valueOld + "/"+ auditLog.valueNew+")":""));
                     newObj[COLUMN_5] = (auditLog.searchResult?"Hit":"");
