--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<div th:fragment="nav(navObj, funcId)" >
+<div th:fragment="nav(navObj, groupId)" >
     <div class="flex-container grid-nav-container">
         <div class="flex-item-2 nav-title-left">
             <span style=" width: '100%'">
@@ -29,7 +29,7 @@
             </span>
         </div>
         <div class="nav-title-right">
-            <span style="width: 100%;" th:text="${funcId}"></span>
+            <span style="width: 100%;" th:text="${groupId}"></span>
             <!--<span style="width: 100%;">AFE0001</span>-->
         </div>
     </div>
