--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -53,6 +53,49 @@
 
 
         });
+
+    </script>
+
+    <script type="text/javascript" th:inline="javascript" th:if="${MENU}">
+        /*<![CDATA[*/
+
+        $(function () {
+            var MENU = "[[${MENU}]]";
+
+            console.log('MENU');
+            console.log(MENU);
+
+            var rootList = "[[${MENU.child}]]";
+            console.log('rootList');
+            // console.log(rootList);
+
+
+            var eServices2List = "[[${MENU.child[0].child}]]";
+            var smartics2List = "[[${MENU.child[1].child}]]";
+            var rmList = "[[${MENU.child[2].child}]]";
+
+            if (!isNotEmptyNullUndfined(eServices2List)) {
+                eServices2List = [];
+            }
+            if (!isNotEmptyNullUndfined(smartics2List)) {
+                smartics2List = [];
+            }
+            if (!isNotEmptyNullUndfined(rmList)) {
+                rmList = [];
+            }
+
+            console.log(eServices2List);
+            console.log(smartics2List);
+            console.log(rmList);
+
+            if (isNotEmptyNullUndfined(rootList) && rootList.length > 0) {
+
+            }
+
+
+        });
+
+        /*]]>*/
     </script>
 
 </head>
@@ -76,6 +119,125 @@
             </div>
             <div class="grid-container " style="border-radius: 20px 20px 0 0; height: 400px;">
                 <div class="main-menu">
+                    <input type="radio" id="main-tab-1" name="main-tabs"  />
+                    <label for="main-tab-1" class="nav-title nav-border-left" style="margin-left: 30px; " th:text="${#messages.msg('umps.adminfunc.nav.eservices2')}"></label>
+                    <input type="radio" id="main-tab-2" name="main-tabs"  />
+                    <label for="main-tab-2" class="nav-title nav-border-left" th:text="${#messages.msg('umps.adminfunc.nav.smartics2')}"></label>
+                    <input type="radio" id="main-tab-3" name="main-tabs"  />
+                    <label for="main-tab-3" class="nav-title nav-border-left" th:text="${#messages.msg('umps.adminfunc.nav.rm')}"></label>
+                    <div style="float: right; " >
+                        <a th:href="@{/AUTH/logout.do}" class="">
+                            <input type="submit" id="exit-tab" name="" />
+                            <label for="exit-tab" class="TopLabel nav-title nav-border-right" ><b th:text="${#messages.msg('umps.adminfunc.nav.exit')}"></b></label>
+                        </a >
+                    </div>
+                    
+                    <div id="main-content-1">
+                        <div class="flex-container grid-nav-container">
+                            <div class="flex-item-1 nav-title-left">
+                                <span style=" width: '100%'">e-Services-2 > <span id="eServices2SubCat"></span></span>
+                            </div>
+                        </div>
+                        <div class="content-container ">
+                            <div class="menu-container flex-container ">
+                                <div class="flex-item-1">&nbsp;</div>
+                                <div class="sub-menu">
+                                    <input type="radio" id="sub-tab-1-1" name="sub-tabs-1" checked="checked" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
+                                    <label for="sub-tab-1-1">Enquiry</label>
+                                    <input type="radio" id="sub-tab-1-2" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MAINTENANCE)" />
+                                    <label for="sub-tab-1-2">Maintenance</label>
+                                    <input type="radio" id="sub-tab-1-3" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MANAGEMENT)" />
+                                    <label for="sub-tab-1-3">Management</label>
+
+
+                                    <div id="sub-content-1-1">
+                                        <ul class="func-parent">
+                                            <li class="func-child" th:each="item : ${MENU.child[0].child[0].child}" >
+                                                <a class="func-bullet" th:href="${#httpServletRequest.getContextPath()} + ${item.url}" th:text="${item.label}"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div id="sub-content-1-2">
+                                        <ul class="func-parent">
+                                            <li class="func-child" th:each="item : ${MENU.child[0].child[1].child}" >
+                                                <a class="func-bullet" th:href="${#httpServletRequest.getContextPath()} + ${item.url}" th:text="${item.label}"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div id="sub-content-1-3">
+                                        <ul class="func-parent">
+                                            <li class="func-child" th:each="item : ${MENU.child[0].child[2].child}" >
+                                                <a class="func-bullet" th:href="${#httpServletRequest.getContextPath()} + ${item.url}" th:text="${item.label}"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="flex-item-1">&nbsp;</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="main-content-2">
+                        <div class="flex-container grid-nav-container">
+                            <div class="flex-item-1 nav-title-left">
+                                <span style=" width: '100%'">SMARTICS-2 > <span id="smartics2SubCat"></span></span>
+                            </div>
+                        </div>
+                        <div class="content-container ">
+                            <div class="menu-container flex-container">
+                                <div class="flex-item-1">&nbsp;</div>
+                                <div class="sub-menu">
+                                    <input type="radio" id="sub-tab-2-1" name="sub-tabs-2" checked="checked" onchange="onSmartics2SubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
+                                    <label for="sub-tab-2-1">Enquiry</label>
+                                    <input type="radio" id="sub-tab-2-2" name="sub-tabs-2" onchange="onSmartics2SubCatSelected(SUB_CAT_MENU.MAINTENANCE)" />
+                                    <label for="sub-tab-2-2">Manatenance</label>
+
+                                    <div id="sub-content-2-1">
+                                        <ul class="func-parent">
+                                            <li class="func-child" th:each="item : ${MENU.child[1].child[0].child}" >
+                                                <a class="func-bullet" th:href="${#httpServletRequest.getContextPath()} + ${item.url}" th:text="${item.label}"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div id="sub-content-2-2">
+                                        <ul class="func-parent">
+                                            <li class="func-child" th:each="item : ${MENU.child[1].child[1].child}" >
+                                                <a class="func-bullet" th:href="${#httpServletRequest.getContextPath()} + ${item.url}" th:text="${item.label}"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="flex-item-1">&nbsp;</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="main-content-3">
+                        <div class="flex-container grid-nav-container">
+                            <div class="flex-item-1 nav-title-left">
+                                <span style=" width: '100%'">RM > <span id="rmSubCat"></span></span>
+                            </div>
+                        </div>
+                        <div class="content-container ">
+                            <div class="menu-container flex-container">
+                                <div class="flex-item-1">&nbsp;</div>
+                                <div class="sub-menu">
+                                    <input type="radio" id="sub-tab-3-1" name="sub-tabs-3" checked="checked" onchange="onRmSubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
+                                    <label for="sub-tab-3-1">Enquiry</label>
+                                    <div id="sub-content-3-1">
+                                        <ul class="func-parent">
+                                            <li class="func-child" th:each="item : ${MENU.child[2].child[0].child}" >
+                                                <a class="func-bullet" th:href="${#httpServletRequest.getContextPath()} + ${item.url}" th:text="${item.label}"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                                </div>
+                                <div class="flex-item-1">&nbsp;</div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!--
 
                     <input type="radio" id="main-tab-1" name="main-tabs"  />
                     <label for="main-tab-1" class="nav-title nav-border-left" style="margin-left: 30px; " th:text="${#messages.msg('umps.adminfunc.nav.eservices2')}"></label>
@@ -89,7 +251,6 @@
                             <label for="exit-tab" class="TopLabel nav-title nav-border-right" ><b th:text="${#messages.msg('umps.adminfunc.nav.exit')}"></b></label>
                         </a >
                     </div>
-
 
                     <div id="main-content-1">
                         <div class="flex-container grid-nav-container">
@@ -228,6 +389,9 @@
                             </div>
                         </div>
                     </div>
+
+                    -->
+
                 </div>
             </div>
         </div>
