--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -11,8 +11,7 @@
 
     <script src="/adminfunc/js/common.js"></script>
 
-    <link rel="stylesheet" href="/adminfunc/css/style.css"></link>
-    <link rel="stylesheet" href="/adminfunc/css/menu.css"></link>
+    <link rel="stylesheet" th:href="@{/css/style.css}"></link>
 
     <script type="text/javascript"   >
 
@@ -35,9 +34,7 @@
                 selectedCat = parseInt(hash);
             }
             $('#main-tab-' + selectedCat).prop('checked', 'checked');
-            if ($(".sub-menu > input[type='radio']:checked").length == 0){
-                $(".sub-menu > input[type='radio']:first").change().prop( "checked" , 'checked');
-            }
+            $("#sub-tab-" + selectedCat +"-1 ").change().prop( "checked" , 'checked');
         });
 
     </script>
@@ -63,6 +60,7 @@
             </div>
             <div class="grid-container " style="border-radius: 20px 20px 0 0; height: 400px;">
                 <div class="main-menu">
+                    <span></span>
                     <th:block th:each="firstLvMenu,firstLvMenuRow : ${MENU.child}">
                         <input th:attr="id=${'main-tab-' + (firstLvMenuRow.index+1)}" th:value="${(firstLvMenuRow.index+1)}" type="radio" name="main-tabs"  />
                         <label th:attr="for=${'main-tab-' + (firstLvMenuRow.index+1)}" class="nav-title nav-border-left" th:text="${firstLvMenu.label}"></label>
@@ -93,7 +91,7 @@
                                         <div id="sub-content-" th:attrappend="id=${(firstLvMenuRow.index+1) + '-' + (secondLvMenuRow.index+1)}">
                                             <ul class="func-parent">
                                                 <li class="func-child" th:each="thridLvMenu,thridLvMenuRow : ${secondLvMenu.child}" >
-                                                    <a class="func-bullet" th:href="${#httpServletRequest.getContextPath()} + ${thridLvMenu.url}" th:text="${thridLvMenu.label}"></a>
+                                                    <a class="func-bullet" th:href="@{${thridLvMenu.url}}" th:text="${thridLvMenu.label}"></a>
                                                 </li>
                                             </ul>
                                         </div>
