--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -29,7 +29,7 @@
             </span>
         </div>
         <div class="nav-title-right">
-            <span style="width: 100%;" th:text="${groupId}"></span>
+            <span style="width: 100%;" th:text="${FUNCTION_ID_KEY}"></span>
             <!--<span style="width: 100%;">AFE0001</span>-->
         </div>
     </div>
