MOD: Remove Login Screen ID

--- a/src/main/resources/templates/Auth/login-form.html
+++ b/src/main/resources/templates/Auth/login-form.html
@@ -77,7 +77,7 @@
             </div>
             <div></div>
             <div class="flex-item-1 nav-title-right">
-                <span style=" width: '100%' ">ASC0001</span>
+                <span style=" width: '100%' "></span>
             </div>
         </div>
         <div class="content-container flex-container">
