--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8"></meta>
     <title>e-Services Admin Function</title>
 
-    <link rel="stylesheet" href="/adminfunc/css/surge-control.css"/>
+    <script th:src="@{/js/lib/jquery-ui.min.js}"></script>
+    <link rel="stylesheet" th:href="@{/js/lib/jquery-ui.css}"/>
 
-    <script type="text/javascript">
+    <link rel="stylesheet" th:href="@{/css/surge-control.css}"/>
+
+    <script th:inline="javascript" type="text/javascript" >
+        /*<![CDATA[*/
         function onHistoricalBlockChanged() {
             var showHistDataContainer = $('#showHistDataContainer');
             if (showHistDataContainer.css('display') == 'none') {
@@ -121,6 +125,7 @@
                 init();
             });
 
+            var value = [[${testJson}]];
 
             var names = [
                 {
@@ -153,7 +158,7 @@
                     pageSize: 5,
                     pageButtonCount: 5,
                     pagerContainer: '#externalPager',
-                    pagerFormat: `current page: {pageIndex}  &nbsp;&nbsp; {first} {prev} <select> <option> {pages} </option> </select>  {next} {last} &nbsp;&nbsp; total pages: {pageCount}`,
+                    pagerFormat: 'current page: {pageIndex}  &nbsp;&nbsp; {first} {prev} <select> <option> {pages} </option> </select>  {next} {last} &nbsp;&nbsp; total pages: {pageCount}',
                     pagePrevText: 'prev',
                     pageNextText: 'next',
                     pageFirstText: 'first',
@@ -174,6 +179,7 @@
                 }
             )
         });
+        /*]]>*/
     </script>
 
 </head>
