--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
@@ -9,6 +9,21 @@
 
     <link rel="stylesheet" th:href="@{/css/surge-control.css}"/>
 
+    <style>
+        #showHistDataContainer {
+            margin-top: 10px;
+            height: 400px;
+            display: none;
+        }
+        #curve_chart {
+            height: 400px;
+        }
+        .well {
+            /*max-height: 200px; */
+            overflow-y: auto;
+        }
+    </style>
+
     <script th:inline="javascript" type="text/javascript" >
         /*<![CDATA[*/
         function onHistoricalBlockChanged() {
@@ -20,41 +35,48 @@
             }
         }
 
+        function drawChart() {
+            var sourceData = [
+                ['AppID', '500', '502'],
+                [0, 0, 0],    [1, 10, 5],   [2, 23, 15],  [3, 17, 9],   [4, 18, 10],  [5, 9, 5],
+                [6, 11, 3],   [7, 27, 19],  [8, 33, 25],  [9, 40, 32],  [10, 32, 24], [11, 35, 27],
+                [12, 30, 22], [13, 40, 32], [14, 42, 34], [15, 47, 39], [16, 44, 36], [17, 48, 40],
+                [18, 52, 44], [19, 54, 46], [20, 42, 34], [21, 55, 47], [22, 56, 48], [23, 57, 49],
+                [24, 60, 52], [25, 50, 42], [26, 52, 44], [27, 51, 43], [28, 49, 41], [29, 53, 45],
+                [30, 55, 47], [31, 60, 52], [32, 61, 53], [33, 59, 51], [34, 62, 54], [35, 65, 57],
+                [36, 62, 54], [37, 58, 50], [38, 55, 47], [39, 61, 53], [40, 64, 56], [41, 65, 57],
+                [42, 63, 55], [43, 66, 58], [44, 67, 59], [45, 69, 61], [46, 69, 61], [47, 70, 62],
+                [48, 72, 64], [49, 68, 60], [50, 66, 58], [51, 65, 57], [52, 67, 59], [53, 70, 62],
+                [54, 71, 63], [55, 72, 64], [56, 73, 65], [57, 75, 67], [58, 70, 62], [59, 68, 60],
+                [60, 64, 56], [61, 60, 52], [62, 65, 57], [63, 67, 59], [64, 68, 60], [65, 69, 61],
+                [66, 70, 62], [67, 72, 64], [68, 75, 67], [69, 80, 72]
+            ];
+            var data = new google.visualization.arrayToDataTable(sourceData);
+
+            var options = {
+                hAxis: {
+                    title: 'Time'
+                },
+                vAxis: {
+                    title: 'Ticket usage'
+                },
+                width: 550,
+                height: 400
+            };
+
+            var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+            chart.draw(data, options);
+
+        }
+
         $(function () {
             $( "#startDatepicker" ).datepicker();
             $( "#endDatepicker" ).datepicker();
-
-
 
             //
             google.charts.load('current', { 'packages': ['corechart'] });
             google.charts.setOnLoadCallback(drawChart);
 
-            function drawChart() {
-                var data = google.visualization.arrayToDataTable([
-                    ['Year', 'Sales', 'Expenses'],
-                    ['2004', 1000, 400],
-                    ['2005', 1170, 460],
-                    ['2006', 660, 1120],
-                    ['2007', 1030, 540]
-                ]);
-
-                var options = {
-                    hAxis: {
-                        title: 'Time'
-                    },
-                    vAxis: {
-                        title: 'Ticket usage'
-                    },
-                    // title: 'Company Performance',
-                    curveType: 'function',
-                    legend: { position: 'bottom' }
-                };
-
-                var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-
-                chart.draw(data, options);
-            }
 
 
             //
@@ -124,8 +146,6 @@
                 }
                 init();
             });
-
-            var value = [[${testJson}]];
 
             var names = [
                 {
@@ -262,7 +282,7 @@
                 </div>
             </div>
 
-            <div id="showHistDataContainer" style="margin-top: 10px; height: 200px; display: none;">
+            <div id="showHistDataContainer">
                 <div class="flex-container">
                     <div class="flex-item-2">
                         <div id="curve_chart"></div>
@@ -275,7 +295,7 @@
                             <input type="text" id="endDatepicker" />
                         </div>
                     </div>
-                    <div class="flex-item-1 well" style="max-height: 200px; overflow-y: auto; ">
+                    <div class="flex-item-1 well" >
                         <ul class="list-group checked-list-box">
                             <li class="list-group-item pointer">Application for Search of Record of Death in Hong Kong (502)</li>
                             <li class="list-group-item pointer">Application for HKSAR Passport (For persons 16 years of age or above applying in Hong Kong) (500)</li>
